<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.LoginActivity"
    tools:keep="@layout/activity_login">

    <androidx.cardview.widget.CardView
        android:alpha="0"
        android:id="@+id/cv_input_container"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:gravity="center"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_email_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/yellow_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_masukan_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textEmailAddress"
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_lock_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/yellow_500"
                android:layout_marginTop="16dp"
                app:passwordToggleEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukan_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="textPassword"
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:visibility="gone"
                android:textColor="#F44336"
                android:id="@+id/error_message_password_or_email"
                android:layout_marginTop="8dp"
                android:text="@string/wrong_password_or_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.orb.myapplication.customview.CsButton
        android:alpha="0"
        app:setEnableBackground="@color/yellow_500"
        android:id="@+id/btn_login"
        android:layout_marginTop="14dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_masuk"
        app:layout_constraintEnd_toEndOf="@+id/cv_input_container"
        app:layout_constraintStart_toStartOf="@+id/cv_input_container"
        app:layout_constraintTop_toBottomOf="@+id/cv_input_container" />

    <com.orb.myapplication.customview.CsButton
        android:alpha="0"
        android:id="@+id/btn_regis"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.45"
        app:setEnableBackground="@color/yellow_500" />



</LinearLayout>