<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity"
    tools:keep="@layout/activity_home">

    <TextView
        android:textColor="@color/black"
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/txt_greeting_message"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.cardview.widget.CardView
        android:alpha="0"
        app:cardCornerRadius="4dp"
        android:elevation="4dp"
        android:id="@+id/cv_account"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_attendance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_attendance"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="-12dp"
            android:src="@drawable/icons8_test_account_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_account" />

        <TextView
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:text="@string/txt_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:alpha="0"
        app:cardCornerRadius="4dp"
        android:elevation="4dp"
        android:id="@+id/cv_attendance"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toStartOf="@+id/cv_logout"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/cv_account"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider">


            <ImageView
                android:layout_marginTop="-12dp"
                android:layout_gravity="center"
                android:src="@drawable/icons8_repository_40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txt_attendance" />

            <TextView
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:layout_marginTop="22dp"
                android:textStyle="bold"
                android:text="@string/txt_attendance"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:alpha="0"
        app:cardCornerRadius="4dp"
        android:elevation="4dp"
        android:id="@+id/cv_logout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/cv_attendance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_attendance"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="-12dp"
            android:src="@drawable/icons8_logout_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/txt_logout" />

        <TextView
            android:layout_gravity="center"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:layout_marginTop="22dp"
            android:textStyle="bold"
            android:text="@string/txt_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginTop="52dp"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_attendance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:textColor="@color/black"
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_status_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txt_status_in" />

            <TextView
                android:id="@+id/tv_status_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txt_status_out" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#FCF9F7"
        android:elevation="8dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_distance"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/txt_distance_message" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/bg_bott_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>