<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.attendance.AttendanceActivity"
    tools:keep="@layout/activity_attendance">

   <com.airbnb.lottie.LottieAnimationView
       android:id="@+id/animation_view"
       android:layout_width="360dp"
       android:layout_height="360dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:lottie_autoPlay="true"
       app:lottie_fileName="radar-searching.json"
       app:lottie_loop="true"
       app:lottie_speed="1" />

   <TextView
       android:visibility="gone"
       android:id="@+id/tv_status"
       android:textSize="18sp"
       android:textColor="#C5245B"
       android:textAlignment="center"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:text="@string/txt_not_allowed_attendance"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/animation_view" />

   <com.orb.myapplication.customview.CsButton
       android:id="@+id/btn_attendance"
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:text="Hadir"
       app:layout_constraintEnd_toEndOf="@+id/animation_view"
       app:layout_constraintHorizontal_bias="0.498"
       app:layout_constraintStart_toStartOf="@+id/animation_view"
       app:layout_constraintTop_toBottomOf="@+id/animation_view"
       app:setDisableBackground="@color/red_700"
       app:setEnableBackground="@color/green_700" />

   <TextView
       android:id="@+id/textView"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="36dp"
       android:text="@string/txt_attendance_in"
       android:textAlignment="center"
       android:textColor="@color/white"
       android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/btn_attendance" />

   <TextView
       android:textAlignment="center"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
       android:text="@string/txt_attendance_out"
       android:textColor="@color/white"
       android:textSize="16sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>